Slider size on tablet was fixed

--- a/src/components/GreetingSlider/GreetingSlider.module.scss
+++ b/src/components/GreetingSlider/GreetingSlider.module.scss
@@ -7,9 +7,11 @@
 
   @include onTablet {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     margin: 0 auto;
     margin-bottom: 96px;
+    max-width: 764px;
   }
 
   @include onDesktop {
@@ -37,13 +39,13 @@
 
   @include onTablet {
     padding: 0 50px;
-    height: 190px;
-    width: 490px;
+    height: 270px;
+    min-width: 522px;
   }
 
   @include onDesktop {
     height: 100%;
-    width: 90%;
+    width: 90%; // ***
   }
 }
 
@@ -54,8 +56,7 @@
   @include onTablet {
     padding-top: 0;
     border-radius: 8px;
-    height: 190px;
-    width: 490px;
+    height: 100%;
   }
 
   @include onDesktop {
@@ -139,8 +140,8 @@
   @include onTablet {
     display: block;
 
-    height: 190px;
-    line-height: 200px;
+    height: 270px;
+    line-height: 260px;
     box-sizing: border-box;
   }
 
